# kernelkit

./: AUDIT_FINDINGS.md  Cargo.toml  README.md
benches/: binformat_bench.rs  mmap_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_binformat.rs  fuzz_file_header.rs  fuzz_hugepage.rs
src/: affinity.rs  binformat.rs  corpus.rs  cpu_features.rs  hugepages.rs  lib.rs  memory.rs  mlock.rs  mmap.rs  numa.rs  perf.rs  prefetch.rs  readahead.rs
tests/: adversarial_impossible.rs  adversarial_kernel.rs  adversarial_mmap_edge_cases.rs  adversarial_mmap_special_files.rs  extreme_scale.rs  fault_injection.rs  mass_mmap_samples.rs  shard_s_perf_pmg_edge.rs  test_legendary_adversarial.rs  test_legendary_gap.rs  test_legendary_property.rs  test_legendary_unit.rs
tests/adversarial/: mod.rs
tests/concurrent/: mod.rs
tests/integration/: mod.rs
tests/property/: mod.rs
tests/regression/: mod.rs
tests/unit/: mod.rs
